[tool.poetry]
name = "ladb-data"
version = "0.1.0"
description = ""
authors = ["Edmond Chuc <edmond@kurrawong.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
jupyter = "^1.0.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.1"
rdflib = "^7.0.0"
pydantic = "^2.6.4"
pyld = "^2.0.4"
pyshacl = "^0.25.0"
rfc3987 = "^1.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
